# scan_merger_2

./: .gitignore  CMakeLists.txt  LICENSE  ORIGINAL_LICENSE  README.md  package.xml
include/laser_scan_merger/: scans_merger.h
include/obstacle_detector/: obstacle_tracker.h
include/obstacle_detector/displays/: circle_visual.h  segment_visual.h
include/obstacle_detector/utilities/: tracked_obstacle.h
launch/: laser_scan_merger.launch
src/: obstacle_extractor.cpp  obstacle_tracker.cpp  scans_merger.cpp
src/displays/: circle_visual.cpp  segment_visual.cpp
src/nodes/: scans_merger_node.cpp
