<?xml version="1.0"?>
<package format="3">
  <name>laser_scan_merger</name>
  <version>1.0.0</version>
  <description>todo.</description>
  <maintainer email="todo@todo.com">Giulio Schiavi</maintainer>
  <author>Giulio Schiavi</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
